fix overflowing containers in dice tray and hp box

--- a/src/mork_borg/CharacterSheet.module.css
+++ b/src/mork_borg/CharacterSheet.module.css
@@ -72,8 +72,13 @@
     display: flex;
     justify-content: space-between;
     margin: 1.5rem;
-    padding: 1.5rem;
+    padding: 1rem 0rem;
     position: relative;
+
+    * {
+        min-width: 0;
+        min-height: 0;
+    }
 }
 
 .vitalityMain {
@@ -81,15 +86,6 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-}
-
-.vitalityLabel {
-    font-size: 1rem;
-    font-weight: 800;
-    letter-spacing: 0.1rem;
-    margin-bottom: 0.25rem;
-    opacity: 0.7;
-    text-transform: uppercase;
 }
 
 .vitalityValues {
@@ -135,7 +131,7 @@
     font-size: 4rem;
     font-weight: 950;
     line-height: 1;
-    padding: 0 1.5rem;
+    padding: 0 1rem;
     transition: color 0.1s;
 }
 
