--- a/src/mork_borg/DiceDrawer.module.css
+++ b/src/mork_borg/DiceDrawer.module.css
@@ -27,6 +27,11 @@
     gap: 1rem;
     grid-template-columns: repeat(4, 1fr);
     margin-bottom: 1rem;
+
+    * {
+        min-width: 0;
+        min-height: 0;
+    }
 }
 
 .diceButton {
